# build-gpt

./: .gitignore  10_reproduce_gpt_play.ipynb  1_minigrad.ipynb  2_makemore_bi_gram.ipynb  3_makemore_mlp.ipynb  4_makemore_mlp_batch_norm.ipynb  5_makemore_mlp_batch_norm.ipynb  6_makemore_mlp_backprop.ipynb  7_makemore_mlp_wavenet.ipynb  8_gpt_tinyshakespeare.ipynb  8_gpt_tinyshakespeare.py  9_tokenization.ipynb  README.md  main.py  pyproject.toml  test.ipynb
.ipynb_checkpoints/: 2_makemore_bi_gram-checkpoint.ipynb  3_makemore_mlp-checkpoint.ipynb  5_makemore_mlp_batch_norm-checkpoint.ipynb  6_makemore_mlp_backprop-checkpoint.ipynb  7_makemore_mlp_wavenet-checkpoint.ipynb  8_gpt_tinyshakespeare-checkpoint.ipynb
gpt/: climbmix.py  dataloader_climbmix.py  fineweb.py  hellaswag.py  play.ipynb  sft.py  sft_datasets.py  train_gpt.py  train_gpt_124M.py
gpt/weights/: log_climbmix.txt
gpt2/: climbmix.py  conversation.py  dataloader.py  dataloader_climbmix.py  hellaswag.py  log.txt  play.ipynb  test.ipynb  train_gpt2.py  train_gpt_700M.py
gpt2/.ipynb_checkpoints/: fineweb-checkpoint.py  train_gpt2-checkpoint.py
