[project]
name = "ml2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "graphviz>=0.21",
    "hf>=1.8.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "regex>=2026.1.15",
    "scikit-learn>=1.6.1",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
    "torch>=2.8.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.23.0",
]
